changed viewer height to inherit; trying to fix hidden overflow when viewed on small phones

--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ ul li:first-child {
     color: black;
     background-color: rgba(255, 255, 255, 0.8);
     box-sizing: border-box;
-    height: 600px;
+    height: inherit;
     flex: 1;
     margin: 0em 3em;
     border-radius: 0 0 25px 25px;
